--- a/magazine.html
+++ b/magazine.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </footer>
-    <script type="module" src="/src/js/magazine.js"></script>
+    <script src="/src/js/magazine.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 </body>
 </html>
