Integrated Events Page into the Website
Added Terms, Accessibility, Privacy and License

Built Layout files Header & Footer's Separate Code

Made the Header Modern & Responsive with Menu Icon

Updated Magazines

--- a/members.html
+++ b/members.html
@@ -1,187 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Members - ASCE & AIDIAS</title>
+    <title>Members | ASCE and AIDIAS</title>
+    <link rel="stylesheet" href="/src/css/header.css">
+    <link rel="stylesheet" href="/src/css/footer.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="/src/css/members.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
+
 <body>
-    <div class="container">
-        <header class="header">
-            <nav class="navbar">
-                <div class="logo">
-                    <img src="../../public/images/co_logo.png" width="100" height="100" class="logoimg" alt="CO Logo">
-                </div>
+    <!-- Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-                <div class="anchors">
-                    <a href="index.html">Home</a>
-                    <a href="members.html" class="active">Members</a>
-                    <a href="magazine.html">Magazine</a>
-                    <a href="#">Events</a>
-                    <a href="#">Social Work</a>
-                </div>
+    <!-- Header -->
+    <header id="header"></header>
 
-                <div class="logo">
-                    <img src="../../public/images/ai_logo.png" width="100" height="100" class="logoimg" alt="AI Logo">
-                </div>
-            </nav>
-        </header>
-            
-        <div class="content">
-            <div class="members-grid">
-                <div id="president" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+    <!-- Main -->
+    <main>
+        <div class="container">
+
+            <div class="content">
+                <div class="members-grid">
+                    <div id="president" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="vicepresidentco" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="vicepresidentco" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="vicepresidentan" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="vicepresidentan" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="eventmanager1" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="eventmanager1" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="eventmanager2" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="eventmanager2" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="decipline1" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="decipline1" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="decipline2" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="decipline2" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="creativity1" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="creativity1" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="creativity2" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="creativity2" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="sports1" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="sports1" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="sports2" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="sports2" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="tresurer1" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="tresurer1" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="tresurer2" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="tresurer2" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="technicalsec" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="technicalsec" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="technicalmem1" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="technicalmem1" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="technicalmem2" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
+                    <div id="technicalmem2" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div id="technicalmem3" class="member">
-                    <div class="member-card">
-                        <div class="member-image"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <footer class="footer">
-        <div class="dock-container">
-            <div class="row">
-                <div class="footer-col">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Members</a></li>
-                        <li><a href="#">Magazines</a></li>
-                        <li><a href="#">Events</a></li>
-                        <li><a href="#">Resources</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Support</h4>
-                    <ul>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="mailto:yashbhavsar.dev2007@gmail.com?subject=ASCE and AIDIAS Website Feature Improvement">Report Bug / Suggest Feature</a></li>
-                        <li><a href="#">Accessability Statement</a></li>
-                        <li><a href="#">Privacy Statement</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Contact</h4>
-                    <ul>
-                        <li><a href="mailto:shubhamdeshmukhs741@gmail.com"><i class="fa fa-envelope"></i> Shubham Deshmukh</a></li>
-                        <li><a href="mailto:yashbhavsar.dev2007@gmail.com"><i class="fa fa-envelope"></i> Yash Bhavsar</a></li>
-                        <li><a href="mailto:surajwakhure@gmail.com"><i class="fa fa-envelope"></i> Suraj Wakhure</a></li>
-                        <li><a href="https://maps.app.goo.gl/umvXkpvA4B2TtR2W8"><i class="fas fa-map-marker-alt"></i> Government Polytechnic, Ch. Sambhajinagar</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>follow us</h4>
-                    <div class="social-links">
-                        <a href="https://gpabad.ac.in/"><i class="far fa-id-card"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/showcase/asce-gpcs/about/"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://www.linkedin.com/showcase/aidias-gpcs/about/"><i class="fab fa-linkedin-in"></i></a>
-
-                        <div id="copyright">
-                            © ASCE and AIDIAS Commitee 2024 All rights reserved.
+                    <div id="technicalmem3" class="member">
+                        <div class="member-card">
+                            <div class="member-image"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </footer>
+    </main>
+
+    <!-- Footer -->
+    <footer id="footer"></footer>
+
+    <!-- Scripts -->
+    <script>
+        $("#header").load("/src/pages/header.html");
+        $("#footer").load("/src/pages/footer.html");
+    </script>
     <script type="module" src="/src/js/members.js"></script>
 </body>
+
 </html>
