Changed PNG/JPEG Images to WEBP
Fixed Body top on Home page

Added Responsiveness to Events

Added Event Links

--- a/events.html
+++ b/events.html
@@ -61,7 +61,7 @@
                         <div class="des">Planted Trees at our Department, came as a gift of Teacher's Day.</div>
                     </div>
                 </div>
-                <div class="item" style="background-image: url('/public/images/grey.jpg')">
+                <div class="item" style="background-image: url('/public/images/grey.webp')">
                     <div class="content">
                         <div class="name">More Events in Future</div>
                         <div class="des">Stay tuned for Future Event Updates!</div>
