--- a/src/pages/events/dussehra_2k24.html
+++ b/src/pages/events/dussehra_2k24.html
@@ -77,9 +77,9 @@
                     Videos.
                 </p>
                 <div class="icons">
-                    <a class="icon1" href="https://www.linkedin.com/"><img src="/public/images/linkedin.png"></a>
-                    <a class="icon2" href="https://www.instagram.com/"><img src="/public/images/instagram.png"></a>
-                    <a class="icon3" href="https://www.drive.google.com/"><img src="/public/images/google-drive.png"></a>
+                    <a class="icon1" href="https://www.linkedin.com/feed/update/urn:li:activity:7251033906894802944"><img src="/public/images/linkedin.webp"></a>
+                    <a class="icon2" href="https://www.instagram.com/asce_committee_gpcs"><img src="/public/images/instagram.webp"></a>
+                    <a class="icon3" href="https://drive.google.com/drive/folders/1K9xq_QUOiQefxTDM3zATUA7PhNpwM3TX?usp=drive_link"><img src="/public/images/google-drive.webp"></a>
                 </div>
             </div>
         </div>
