--- a/src/pages/events/teachers_day_2k24.html
+++ b/src/pages/events/teachers_day_2k24.html
@@ -78,10 +78,10 @@
                     Videos.
                 </p>
                 <div class="icons">
-                    <a class="icon1" href="https://www.linkedin.com/"><img src="/public/images/linkedin.png"></a>
-                    <a class="icon2" href="https://www.instagram.com/"><img src="/public/images/instagram.png"></a>
-                    <a class="icon3" href="https://www.drive.google.com/"><img
-                            src="/public/images/google-drive.png"></a>
+                    <a class="icon1" href="https://www.linkedin.com/feed/update/urn:li:activity:7238379079362596865"><img src="/public/images/linkedin.webp"></a>
+                    <a class="icon2" href="https://www.instagram.com/reel/C_k7_cJPOp0/"><img src="/public/images/instagram.webp"></a>
+                    <a class="icon3" href="https://drive.google.com/drive/folders/1r2UFg-kYnEKdW_8j1S60lvg-ab5Mpz3K?usp=drive_link"><img
+                            src="/public/images/google-drive.webp"></a>
                 </div>
             </div>
         </div>
