--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -8,7 +8,7 @@
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <img src="/public/images/co_logo.png" class="logoimg" alt="CO Logo">
+                <img src="/public/images/co_logo.webp" class="logoimg" alt="CO Logo">
             </div>
 
             <div class="menu-toggle" id="menuToggle">
@@ -26,7 +26,7 @@
             </div>
 
             <div class="logo">
-                <img src="/public/images/ai_logo.png" class="logoimg" alt="AI Logo">
+                <img src="/public/images/ai_logo.webp" class="logoimg" alt="AI Logo">
             </div>
         </nav>
     </header>
