--- a/src/pages/events/committee_establishment.html
+++ b/src/pages/events/committee_establishment.html
@@ -78,9 +78,9 @@
                     Videos.
                 </p>
                 <div class="icons">
-                    <a class="icon1" href="https://www.linkedin.com/"><img src="/public/images/linkedin.png"></a>
-                    <a class="icon2" href="https://www.instagram.com/"><img src="/public/images/instagram.png"></a>
-                    <a class="icon3" href="https://www.drive.google.com/"><img src="/public/images/google-drive.png"></a>
+                    <a class="icon1" href="https://www.linkedin.com/feed/update/urn:li:activity:7238387448462880769"><img src="/public/images/linkedin.webp"></a>
+                    <a class="icon2" href="https://www.instagram.com/asce_committee_gpcs"><img src="/public/images/instagram.webp"></a>
+                    <a class="icon3" href="https://drive.google.com/drive/folders/1r2UFg-kYnEKdW_8j1S60lvg-ab5Mpz3K?usp=drive_link"><img src="/public/images/google-drive.webp"></a>
                 </div>
             </div>
         </div>
