--- a/src/pages/footer.html
+++ b/src/pages/footer.html
@@ -47,7 +47,7 @@
                     <h4>follow us</h4>
                     <div class="social-links">
                         <a href="https://gpabad.ac.in/"><i class="far fa-id-card"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/asce_committee_gpcs"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/showcase/asce-gpcs/about/"><i
                                 class="fab fa-linkedin-in"></i></a>
                         <a href="https://www.linkedin.com/showcase/aidias-gpcs/about/"><i
