--- a/src/pages/temp.html
+++ b/src/pages/temp.html
@@ -141,7 +141,7 @@
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <img src="/public/images/co_logo.png" class="logoimg" alt="CO Logo">
+                <img src="/public/images/co_logo.webp" class="logoimg" alt="CO Logo">
             </div>
 
             <div class="menu-toggle" id="menuToggle">
@@ -159,7 +159,7 @@
             </div>
 
             <div class="logo">
-                <img src="/public/images/ai_logo.png" class="logoimg" alt="AI Logo">
+                <img src="/public/images/ai_logo.webp" class="logoimg" alt="AI Logo">
             </div>
         </nav>
     </header>
