--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
                         <h2>Unity Builds Stronger Teams</h2>
                         <h4>WELCOME TO STUDENTS COMMITEE OF CO & AN</h4>
                         <h1>ASCE & AIDIAS</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum repellat mollitia architecto
-                            laudantium vel delectus, obcaecati iusto debitis? Esse quo pariatur ipsum, dolores ea
-                            asperiores. Perspiciatis, eius totam? Laboriosam, possimus?</p>
+                        <p>The Commitee of thriving students of the CO & AN which aims to the co-ordinate 
+                            all the functions,events and the any query of the students.The Commitee is always
+                            be their to resolve problems of students regarding to their academics and upto some 
+                            extent their personal problems as well.Thank to all students and the teachers to 
+                            give chance to us for the working in the organization , and thinking deserved to the
+                            posts....warm regards from ASCE & AIDIAS
+                        </p>
                     </div>
                 </div>
 
