--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <h2>Unity Builds Stronger Teams</h2>
                         <h4>WELCOME TO STUDENTS COMMITEE OF CO & AN</h4>
                         <h1>ASCE & AIDIAS</h1>
-                        <p>The Commitee of thriving students of the CO & AN which aims to the co-ordinate 
+                        <p>The Commitee of Thriving students of the CO & AN which aims to the co-ordinate 
                             all the functions,events and the any query of the students.The Commitee is always
                             be their to resolve problems of students regarding to their academics and upto some 
                             extent their personal problems as well.Thank to all students and the teachers to 
