Created a temporary Home page design at src/pages/temp.html

--- a/index.html
+++ b/index.html
@@ -26,15 +26,9 @@
                 <div class="intro-container">
                     <div class="ineer-intro-div">
                         <h2>Unity Builds Stronger Teams</h2>
-                        <h4>WELCOME TO STUDENTS COMMITEE OF CO & AN</h4>
+                        <h4>WELCOME TO STUDENTS COMMITTEE OF CO & AN</h4>
                         <h1>ASCE & AIDIAS</h1>
-                        <p>The Commitee of thriving students of the CO & AN which aims to the co-ordinate 
-                            all the functions,events and the any query of the students.The Commitee is always
-                            be their to resolve problems of students regarding to their academics and upto some 
-                            extent their personal problems as well.Thank to all students and the teachers to 
-                            give chance to us for the working in the organization , and thinking deserved to the
-                            posts....warm regards from ASCE & AIDIAS
-                        </p>
+                        <p>The Committee of Thriving Students of the CO & AN departments aims to coordinate all Functions, Events, and any queries from the Students. The Committee is always there to resolve students' problems regarding their academics and to some extent, their personal problems as well. We thank all the students and the teachers for giving us a chance to work in the organization and thinking we deserved the posts. Warm regards from ASCE & AIDIAS.</p>
                     </div>
                 </div>
 
