--- a/src/pages/footer.html
+++ b/src/pages/footer.html
@@ -7,7 +7,7 @@
 <body>
     <footer class="footer">
         <div class="dock-container">
-            <div class="row">
+            <div class="frow">
                 <div class="footer-col">
                     <h4>Quick Links</h4>
                     <ul>
