--- a/src/pages/temp.html
+++ b/src/pages/temp.html
@@ -2,177 +2,293 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Index - Moderna Bootstrap Template</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
 
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #f0f0f0;
-            color: #333;
-        }
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-        .header {
-            width: 100%;
-            background-color: #00bfa5;
-            position: sticky;
-            top: 0;
-            z-index: 10;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        }
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
+    <!-- Vendor CSS Files -->
+    <link href="/src/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/src/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="/src/vendor/aos/aos.css" rel="stylesheet">
+    <link href="/src/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="/src/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-        .logo {
-            display: flex;
-            align-items: center;
-        }
+    <!-- Main CSS File -->
+    <link rel="stylesheet" href="/src/css/header.css">
+    <link rel="stylesheet" href="/src/css/footer.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link href="/src/css/temp.css" rel="stylesheet">
 
-        .logoimg {
-            border-radius: 12px;
-            width: 65px;
-            height: 65px;
-            transition: transform 0.3s ease;
-        }
-
-        .logoimg:hover {
-            transform: scale(1.1);
-        }
-
-        .anchors {
-            display: flex;
-            gap: 25px;
-            justify-content: center;
-            flex-grow: 1;
-        }
-
-        .anchors a {
-            color: white;
-            text-decoration: none;
-            font-weight: 600;
-            padding: 8px 16px;
-            border-radius: 25px;
-            transition: background-color 0.3s, transform 0.3s ease;
-        }
-
-        .anchors a:hover {
-            background-color: rgba(255, 230, 0, 0.2);
-            transform: scale(1.05);
-        }
-
-        /* Hamburger Menu */
-        .menu-toggle {
-            display: none;
-            flex-direction: column;
-            cursor: pointer;
-        }
-
-        .menu-toggle .bar {
-            width: 40px;
-            height: 3px;
-            background-color: white;
-            margin: 2.5px 0;
-            transition: all 0.3s ease;
-        }
-
-        .menu-toggle.active .bar:nth-child(1) {
-            transform: translateY(8px) rotate(45deg);
-        }
-
-        .menu-toggle.active .bar:nth-child(2) {
-            opacity: 0;
-        }
-
-        .menu-toggle.active .bar:nth-child(3) {
-            transform: translateY(-8px) rotate(-45deg);
-        }
-
-        /* Mobile Styles */
-        @media (max-width: 768px) {
-            .anchors {
-                display: none;
-                flex-direction: column;
-                position: absolute;
-                top: 100%;
-                left: 0;
-                right: 0;
-                background-color: #00bfa5;
-                padding: 10px 0;
-                text-align: center;
-                border-radius: 0 0 12px 12px;
-                box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
-            }
-
-            .anchors a {
-                padding: 15px 0;
-                border-bottom: 1px solid #6cd7c3;
-            }
-
-            .menu-toggle {
-                display: flex;
-            }
-
-            .logoimg {
-                width: 50px;
-                height: 50px;
-            }
-        }
-
-        @media (max-width: 500px) {
-            .anchors a {
-                font-size: 14px;
-            }
-        }
-    </style>
 </head>
 
-<body>
-    <header class="header">
-        <nav class="navbar">
-            <div class="logo">
-                <img src="/public/images/co_logo.webp" class="logoimg" alt="CO Logo">
-            </div>
+<body class="index-page">
+    <!-- Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-            <div class="menu-toggle" id="menuToggle">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
+    <!-- Header -->
+    <header id="header" class="header d-flex align-items-center fixed-top">
+        <header class="header">
+            <nav class="navbar">
+                <!-- <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between"> -->
+                <div class="logo">
+                    <img src="/public/images/co_logo.webp" class="logoimg" alt="CO Logo">
+                </div>
 
-            <div class="anchors" id="navMenu">
-                <a id="Home" href="/">Home</a>
-                <a id="Members" href="/members.html">Members</a>
-                <a id="Magazines" href="/magazines.html">Magazines</a>
-                <a id="Events" href="/events.html">Events</a>
-                <a id="Resources" href="/resources.html">Resources</a>
-            </div>
+                <div class="menu-toggle" id="menuToggle">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
 
-            <div class="logo">
-                <img src="/public/images/ai_logo.webp" class="logoimg" alt="AI Logo">
-            </div>
-        </nav>
+                <div class="anchors " id="navMenu">
+                    <a id="Home" href="/">Home</a>
+                    <a id="Members" href="/members.html">Members</a>
+                    <a id="Magazines" href="/magazines.html">Magazines</a>
+                    <a id="Events" href="/events.html">Events</a>
+                    <a id="Resources" href="/resources.html">Resources</a>
+                </div>
+
+                <div class="logo">
+                    <img src="/public/images/ai_logo.webp" class="logoimg" alt="AI Logo">
+                </div>
+                <!-- </div> -->
+            </nav>
+        </header>
+
     </header>
-
     <script>
-    const menuToggle = document.getElementById('menuToggle');
-    const navMenu = document.getElementById('navMenu');
+        const menuToggle = document.getElementById("menuToggle");
+        const navMenu = document.getElementById("navMenu");
 
-    menuToggle.addEventListener('click', function () {
-        navMenu.style.display = navMenu.style.display === 'flex' ? 'none' : 'flex';
-        menuToggle.classList.toggle('active');
-    });
+        menuToggle.addEventListener("click", function () {
+            navMenu.style.display = navMenu.style.display === "flex" ? "none" : "flex";
+            menuToggle.classList.toggle("active");
+        });
     </script>
+
+    <main class="main">
+
+        <!-- Hero Section -->
+        <section id="hero" class="hero section dark-background">
+
+            <!-- <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in"> -->
+
+            <div id="hero-carousel" class="carousel carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
+
+                <div class="container position-relative">
+
+                    <div class="carousel-item active">
+                        <div class="carousel-container">
+                            <h2>Welcome to ASCE and AIDIAS</h2>
+                            <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil
+                                ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse
+                                doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                            <a href="#features" class="btn-get-started">Read More</a>
+                        </div>
+                    </div><!-- End Carousel Item -->
+
+                    <div class="carousel-item">
+                        <div class="carousel-container">
+                            <h2>Official Committee Website</h2>
+                            <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil
+                                ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse
+                                doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                            <a href="#features" class="btn-get-started">Read More</a>
+                        </div>
+                    </div><!-- End Carousel Item -->
+
+                    <div class="carousel-item">
+                        <div class="carousel-container">
+                            <h2>Know About Us</h2>
+                            <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil
+                                ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse
+                                doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                            <a href="#features" class="btn-get-started">Read More</a>
+                        </div>
+                    </div><!-- End Carousel Item -->
+
+                    <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
+                    </a>
+
+                    <a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
+                    </a>
+
+                    <ol class="carousel-indicators"></ol>
+
+                </div>
+
+            </div>
+
+        </section><!-- /Hero Section -->
+
+        <!-- Featured Services Section -->
+        <section id="featured-services" class="featured-services section">
+
+            <div class="container">
+
+                <div class="row gy-4">
+
+                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                        <div class="service-item item-cyan position-relative">
+                            <div class="icon">
+                                <i class="bi bi-activity"></i>
+                            </div>
+                            <a href="service-details.html" class="stretched-link">
+                                <h3>Aim</h3>
+                            </a>
+                            <p>Committee AIM Here</p>
+                        </div>
+                    </div><!-- End Service Item -->
+
+                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+                        <div class="service-item item-orange position-relative">
+                            <div class="icon">
+                                <i class="bi bi-broadcast"></i>
+                            </div>
+                            <a href="service-details.html" class="stretched-link">
+                                <h3>Mission</h3>
+                            </a>
+                            <p>Committee MISSION Here</p>
+                        </div>
+                    </div><!-- End Service Item -->
+
+                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+                        <div class="service-item item-teal position-relative">
+                            <div class="icon">
+                                <i class="bi bi-easel"></i>
+                            </div>
+                            <a href="service-details.html" class="stretched-link">
+                                <h3>Vision</h3>
+                            </a>
+                            <p>Committee VISION Here</p>
+                        </div>
+                    </div><!-- End Service Item -->
+                </div>
+
+            </div>
+
+        </section><!-- /Featured Services Section -->
+
+
+        <!-- Features Section -->
+        <section id="features" class="features section">
+
+            <!-- Section Title -->
+            <div class="container section-title" data-aos="fade-up">
+                <h2>Featured Images</h2>
+                <p>Here are some images from key moments of our Committee</p>
+            </div><!-- End Section Title -->
+
+            <div class="container">
+
+                <div class="row gy-4 align-items-center features-item">
+                    <div class="col-md-5 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
+                        <img src="/public/images/committee1.webp" class="img-fluid" alt="">
+                    </div>
+                    <div class="col-md-7" data-aos="fade-up" data-aos-delay="100">
+                        <h3>Teacher's Day Decoration</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore
+                            magna aliqua.
+                        </p>
+                    </div>
+                </div><!-- Features Item -->
+
+                <div class="row gy-4 align-items-center features-item">
+                    <div class="col-md-5 order-1 order-md-2 d-flex align-items-center" data-aos="zoom-out"
+                        data-aos-delay="200">
+                        <img src="/public/images/committee2.webp" class="img-fluid" alt="">
+                    </div>
+                    <div class="col-md-7 order-2 order-md-1" data-aos="fade-up" data-aos-delay="200">
+                        <h3>All Members of Committee</h3>
+                        <p>
+                            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate
+                            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in
+                            culpa qui officia deserunt mollit anim id est laborum
+                        </p>
+                    </div>
+                </div><!-- Features Item -->
+                
+                <div class="row gy-4 align-items-center features-item">
+                    <div class="col-md-5 d-flex align-items-center" data-aos="zoom-out">
+                        <img src="/public/images/committee3.webp" class="img-fluid" alt="">
+                    </div>
+                    <div class="col-md-7" data-aos="fade-up">
+                        <h3>Committee Establishment</h3>
+                        <p>Cupiditate placeat cupiditate placeat est ipsam culpa. Delectus quia minima quod. Sunt saepe
+                            odit aut quia voluptatem hic voluptas dolor doloremque.</p>
+                    </div>
+                </div><!-- Features Item -->
+
+                <div class="row gy-4 align-items-center features-item">
+                    <div class="col-md-5 order-1 order-md-2 d-flex align-items-center" data-aos="zoom-out">
+                        <img src="/public/images/committee4.webp" class="img-fluid" alt="">
+                    </div>
+                    <div class="col-md-7 order-2 order-md-1" data-aos="fade-up">
+                        <h3>Dussehra 2k24 Decoration</h3>
+                        <p>
+                            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate
+                            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in
+                            culpa qui officia deserunt mollit anim id est laborum
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </section><!-- /Features Section -->
+
+    </main>
+
+    <footer id="footer" class="footer dark-background"></footer>
+
+    <!-- Scroll Top -->
+    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+            class="bi bi-arrow-up-short"></i></a>
+
+    <!-- Preloader -->
+    <!-- <div id="preloader"></div> -->
+
+    <!-- Vendor JS Files -->
+    <script src="/src/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/src/vendor/php-email-form/validate.js"></script>
+    <script src="/src/vendor/aos/aos.js"></script>
+    <script src="/src/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="/src/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="/src/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="/src/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="/src/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="/src/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+
+    <!-- Main JS File -->
+
+    <!-- Scripts -->
+    <script>
+        $("#footer").load("/src/pages/footer.html");
+    </script>
+    <script type="module" src="/src/js/main.js"></script>
+    <script type="module" src="/src/js/temp.js"></script>
+
 </body>
 
 </html>
