Moved some files
temp.html -> index.html

index.html -> prev-index.html

Added proper Body Top to all other pages.

--- a/members.html
+++ b/members.html
@@ -10,6 +10,17 @@
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="/src/css/members.css">
+    
+    <style>
+        body {
+            margin-top: 85px;
+        }
+        @media (max-width: 768px) {
+            body {
+                margin-top: 80px;
+            }
+        }
+    </style>
 </head>
 
 <body>
