--- a/src/pages/accessibility_statement.html
+++ b/src/pages/accessibility_statement.html
@@ -11,6 +11,14 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
     <style>
+        body {
+            margin-top: 85px;
+        }
+        @media (max-width: 768px) {
+            body {
+                margin-top: 80px;
+            }
+        }
         .accessibility-statement {
             padding: 30px;
             text-align: justify;
