--- a/magazines.html
+++ b/magazines.html
@@ -11,6 +11,17 @@
     <link rel="stylesheet" href="/src/css/magazines.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+        
+    <style>
+        body {
+            margin-top: 85px;
+        }
+        @media (max-width: 768px) {
+            body {
+                margin-top: 80px;
+            }
+        }
+    </style>
 </head>
 
 <body>
